--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -11,8 +11,11 @@
     {% include 'recipes/partials/header.html' %}
     {% include 'recipes/partials/search.html' %}
 
-    <main class="main-content-containder">
-         {% block content %}{% endblock content %} 
+    <main class="main-content-container">
+        {% block content %}{% endblock content %} 
+         
+        {% include 'recipes/partials/pagination.html' %}
+
     </main>  
     {% include 'recipes/partials/footer.html' %}
 
